generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

model Product {
  id          String            @id @default(cuid())
  name        String
  price       Float
  sku         String?
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt
  cartItems   CartItem[]
  txnItems    TransactionItem[]
}

model CartItem {
  id        String   @id @default(cuid())
  productId String
  quantity  Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId])
}

model Transaction {
  id        String            @id @default(cuid())
  total     Float
  createdAt DateTime          @default(now())
  items     TransactionItem[]
}

model TransactionItem {
  id             String      @id @default(cuid())
  transactionId  String
  productId      String
  quantity       Int
  unitPrice      Float
  lineTotal      Float

  transaction Transaction @relation(fields: [transactionId], references: [id], onDelete: Cascade)
  product     Product     @relation(fields: [productId], references: [id])

  @@index([transactionId])
  @@index([productId])
}
